--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,7 @@ jobs:
           context: src
           push: true
           tags: ${{steps.tags.outputs.tags}}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          no-cache: true
           labels: |
             org.opencontainers.image.created=${{steps.tags.outputs.rfc3339}}
             org.opencontainers.image.authors=discord:pg9182#8484
