--- a/.github/workflows/preserve_cache.yml
+++ b/.github/workflows/preserve_cache.yml
@@ -14,7 +14,9 @@ jobs:
       contents: read
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
