--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,13 @@ name: ci
 
 on:
   push:
+    branches:
+      - master
     paths:
       - ".github/workflows/ci.yml"
       - src/**
       - scripts/mktag.sh
+
 
 jobs:
   server-docker:
